Migrated revision of About Me

--- a/source/_posts/2011-02-21-about-me.md
+++ b/source/_posts/2011-02-21-about-me.md
@@ -17,7 +17,8 @@ summary: |
 ---
 I'm Jake, a Senior Developer working for Readify, Microsoft MVP (VSTO) and spend most of my spare time doing open source WPF, VSTO, WCF and Silverlight development, or speaking at local user groups.
 
-Hope the content here will be useful to you. Unless specified all code on this blog is released under MIT License
+Hope the content here will be useful to you. Unless specified all code on this blog is released under MIT License.
+
 ![Me][1]
 ![Microsoft MVP (VSTO)][2]
 ![Readify][3]
