Migrated revision of About Me

--- a/source/_posts/2011-02-21-about-me.md
+++ b/source/_posts/2011-02-21-about-me.md
@@ -3,7 +3,7 @@ layout: post
 title: About Me
 metaTitle: About Me
 description: A bit of information about me
-revised: 2011-02-21
+revised: 2011-06-22
 date: 2011-02-21
 categories: []
 migrated: true
@@ -19,11 +19,14 @@ I'm Jake, a Senior Developer working for Readify, Microsoft MVP (VSTO) and spend
 
 Hope the content here will be useful to you. Unless specified all code on this blog is released under MIT License.
 
-![Me][1]
-![Microsoft MVP (VSTO)][2]
-![Readify][3]
+You can contact me on twitter [JakeGinnivan][1] or email me at jake at ginnivan dot net
+
+![Me][2]
+![Microsoft MVP (VSTO)][3]
+![Readify][4]
 
 
-  [1]: /get/MeSmall.jpg
-  [2]: /get/mvp-logo-small.gif
-  [3]: http://readify.net/img/readify.jpg
+  [1]: http://twitter.com/JakeGinnivan
+  [2]: /get/MeSmall.jpg
+  [3]: /get/mvp-logo-small.gif
+  [4]: http://readify.net/img/readify.jpg
