Migrated revision of UI TDD - UI Automation Experiment

--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -67,16 +67,20 @@ Now that we have the CodedUI assemblies referenced it is time to set everything 
 
 `NOTE:` If you have resharper, disable shadow copy on unit tests otherwise it makes it pretty hard to run your tests locally.
 
-We start off defining our application, this is a nice bootstrapper to abstract starting our app and handling shutdown.
+We start off defining our application, this is a nice bootstrapper to abstract starting our app and handling shutdown. You should use Name, then the name will be the window title.
 
     public class TodoApp : WpfApplicationBase
     {
         protected override WpfWindow GetMainWindow()
         {
             return new WpfWindow
-            {
-                WindowTitles = { "Wpf Todo List" }
-            };
+                        {
+                            SearchProperties =
+                                {
+                                    {UITestControl.PropertyNames.Name, "Wpf Todo List"}
+                                },
+                            TechnologyName = "UIA"
+                        };
         }
 
         protected override string ApplicationExeLocation
@@ -94,6 +98,8 @@ Now we have our application bootstrapper, we define our CodedUITestBase class wh
 Notice that we are inheriting from `CodedUITestBase<T> where T : ICodedUIApplication, new()`
 
 It is the job of CodedUITestBase to bootstrap your application. The reason we create your own is so you can extend it.
+
+One more thing is if you use the r# test runner, make sure you compile your test project as x86 otherwise I have found things go a bit strange.
 
 # Writing our first test!
 When using mstestcontrib to write Coded UI Tests (CUIT's) our tests will always start with a screen.
@@ -131,4 +137,44 @@ Next we start building our screens up. I want to add a task, it is an action I p
         }
 
 Get R# or visual studio do generate that method on your MainScreen class, then we can start writing some UI Automation!
+
+    public NewTaskScreen NewTask()
+    {
+        var addTaskButton = Window.Get<WpfButton>("AddTaskButton");
+        addTaskButton.Click();
+
+        return new NewTaskScreen(Application, Window.GetWindow("AddTask"));
+    }
+
+There is a few things you may notice with this, I am using a Get<T> extension method on my WPF window, I feel this is a cleaner syntax than the out of the box syntax with CodedUI.
+Click is also an extension method (I think it reads better than `Mouse.Click(addTaskButton);`)
+
+We then return a NewTaskScreen, in the second parameter we find the child/modal window and pass it into the screen. 
+
+After a little bit more coding our test looks like this
+
+    [TestMethod]
+    public void CodedUITestMethod1()
+    {
+        var mainScreen = MainScreen();
+        var newTaskScreen = mainScreen.NewTask();
+
+        newTaskScreen.Title = "Write some tests";
+        newTaskScreen.Description = "for MSTestContrib";
+        newTaskScreen.DueDate = DateTime.Now.AddDays(3);
+
+        newTaskScreen.Create();
+    }
+
+# Run the test
+
+Obviously our test will fail, we have not created any UI yet, only our UI Automation Test.
+
+Test method WpfTodo.Tests.CanAddTaskTest.CodedUITestMethod1 threw exception: 
+Microsoft.VisualStudio.TestTools.UITest.Extension.UITestControlNotFoundException: The playback failed to find the control with the given search properties. Additional Details: 
+TechnologyName:  'UIA'
+ControlType:  'Button'
+AutomationId:  'AddTaskButton'
+
+So, lets create the UI.
 
