Migrated revision of UI TDD - UI Automation Experiment

--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -3,7 +3,7 @@ layout: post
 title: UI TDD - UI Automation Experiment
 metaTitle: UI TDD  - UI Automation Experiment
 description: After using UI automation in a project which went live yesterday, I wanted to try UI TDD with my lessons learnt. This is the story.
-revised: 2011-07-12
+revised: 2011-07-13
 date: 2011-07-12
 categories: [ui-automation,open-source]
 migrated: true
@@ -178,3 +178,5 @@ AutomationId:  'AddTaskButton'
 
 So, lets create the UI.
 
+
+Post in progress... found a bug in Funnelweb to do with Feeds. Oops
