Migrated revision of UI TDD - UI Automation Experiment

--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -3,7 +3,7 @@ layout: post
 title: UI TDD - UI Automation Experiment
 metaTitle: UI TDD  - UI Automation Experiment
 description: After using UI automation in a project which went live yesterday, I wanted to try UI TDD with my lessons learnt. This is the story.
-revised: 2011-07-13
+revised: 2011-07-15
 date: 2011-07-12
 categories: [ui-automation,open-source]
 migrated: true
@@ -176,7 +176,73 @@ TechnologyName:  'UIA'
 ControlType:  'Button'
 AutomationId:  'AddTaskButton'
 
-So, lets create the UI.
+So, lets create the UI making sure that we AutomationIds to the controls as we go so they will be picked up by the test we have written. I won't post all the code as you can get at this sample in the MsTestContrib project on codeplex.
 
+    <Window x:Class="WpfTodo.View.NewTaskWindow"
+            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+            Title="New Task"
+            Height="300"
+            Width="300"
+            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+            xmlns:ViewModel="clr-namespace:WpfTodo.ViewModel"
+            mc:Ignorable="d"
+            d:DataContext="{d:DesignInstance ViewModel:NewTaskViewModel}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+    
+            <Label Content="Title: " />
+            <TextBox Text="{Binding Task.Title}"
+                     AutomationProperties.AutomationId="Title"
+                     Grid.Column="1" />
+    
+            <Label Content="Description: "
+                   Grid.Row="1" />
+            <TextBox Text="{Binding Task.Description}"
+                     AutomationProperties.AutomationId="Description"
+                     Grid.Column="1"
+                     Grid.Row="1" />
+    
+            <Label Content="Due Date: "
+                   Grid.Row="2" />
+            <DatePicker SelectedDate="{Binding Task.DueDate}"
+                        AutomationProperties.AutomationId="DueDate"
+                        Grid.Column="1"
+                        Grid.Row="2" />
+    
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        Grid.ColumnSpan="2"
+                        Grid.Row="3">
+                <Button Content="Create"
+                        AutomationProperties.AutomationId="CreateButton"
+                        Command="{Binding CreateTaskCommand}" />
+                <Button Content="Cancel"
+                        AutomationProperties.AutomationId="CancelButton"
+                        Command="{Binding CancelCommand}" />
+            </StackPanel>
+        </Grid>
+    </Window>
 
-Post in progress... found a bug in Funnelweb to do with Feeds. Oops
+Which looks like this (I will make pretty later:P)
+
+![New Task Window](/assets/posts/2011-07-12-uitdd/NewTask.png)
+
+Lets run our test:
+
+![Test Results](/assets/posts/2011-07-12-uitdd/TodoAppTestResult.PNG)
+
+Awesome! It has automated our app, and put a task in. The test is still not much use as we are not verifying that our app is actually working.
+
+Post in progress... found a bug in Funnelweb to do with Feeds. Oops125
