Migrated revision of UI TDD - UI Automation Experiment

--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -3,7 +3,7 @@ layout: post
 title: UI TDD - UI Automation Experiment
 metaTitle: UI TDD  - UI Automation Experiment
 description: After using UI automation in a project which went live yesterday, I wanted to try UI TDD with my lessons learnt. This is the story.
-revised: 2011-07-15
+revised: 2011-07-17
 date: 2011-07-12
 categories: [ui-automation,open-source]
 migrated: true
@@ -243,6 +243,57 @@ Lets run our test:
 
 ![Test Results](/assets/posts/2011-07-12-uitdd/TodoAppTestResult.PNG)
 
-Awesome! It has automated our app, and put a task in. The test is still not much use as we are not verifying that our app is actually working.
+Awesome! It has automated our app, and put a task in. The test is still not much use as we are not verifying that our app is actually working. To verify we start off extending out test.
 
-Post in progress... found a bug in Funnelweb to do with Feeds. Oops125
+    var tasks = mainScreen.Tasks.ToList();
+    Assert.AreEqual(1, tasks.Count);
+    Assert.AreEqual(title, tasks[0].Title);
+
+Notice we have abstracted the UI of the lists behind a Tasks collection. Which you can see how the UI is put together below.
+
+One thing to point out is you MUST use a Label not a TextBlock, because the TextBlock has no Automation Peer, and is not discoverable by UIA. ItemsControls also suffer from the same issue.
+
+I will post the source for a UITextBlock control which is a TextBlock with an Automation Peer which allows much nicer formatting. But for now, Label's will do.
+
+    <ListBox ItemsSource="{Binding Tasks}"
+                    AutomationProperties.AutomationId="TasksList"
+                    Grid.Row="1">
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Content="{Binding Title}"
+                               AutomationProperties.AutomationId="Title" />
+                        <Label Content=" (" />
+                        <Label Content="{Binding DueDate, StringFormat=d}"
+                               AutomationProperties.AutomationId="DueDate" />
+                        <Label Content=")" />
+                    </StackPanel>
+                    <Label Content="{Binding Description}"
+                           AutomationProperties.AutomationId="Description" />
+                </StackPanel>
+            </DataTemplate>
+        </ListBox.ItemTemplate>
+    </ListBox>
+
+And finally we fill in the UI Automation code for the Tasks property on MainScreen.
+
+    public IEnumerable<Task> Tasks
+    {
+        get
+        {
+            var tasks = Window.Get<WpfList>("TasksList");
+            return from WpfListItem item in tasks.Items
+                    select new Task
+                                {
+                                    Title = item.Get<WpfText>("Title").DisplayText,
+                                    Description = item.Get<WpfText>("Description").DisplayText,
+                                    DueDate = DateTime.Parse(item.Get<WpfText>("DueDate").DisplayText)
+                                };
+        }
+    }
+
+Run our test again, success!
+
+# Resources & Source Code
+The sample project I built in this post is available from the [MSTestContrib](http://mstestcontrib.codeplex.com/SourceControl/list/changesets) project on CodePlex.
