Migrated revision of NuGet Packages targeting WP7

--- a/source/_posts/2011-06-21-nugetwp7.md
+++ b/source/_posts/2011-06-21-nugetwp7.md
@@ -3,7 +3,7 @@ layout: post
 title: NuGet Packages targeting WP7
 metaTitle: New post
 description: NuGet 1.4 has just come out, as has the mango tools. 1.4 breaks existing targets, here is my solution
-revised: 2011-06-23
+revised: 2011-07-26
 date: 2011-06-21
 categories: [mango,wp7,nuget]
 migrated: true
@@ -15,6 +15,8 @@ summary: |
   NuGet 1.4 has just come out, as has the mango tools. 1.4 breaks existing targets, here is my solution
 
 ---
+**Update** Compatibility table at http://docs.nuget.org/docs/creating-packages/creating-and-publishing-a-package#Common_Framework_and_Profile_Targeting_Examples
+
 I released windows phone essentials last week, and I have the mango tools installed, so all seemed fine. Then when a friend of mine tried to install the package they got the following error:
 
     Unable to find assembly references that are compatible with the target framework 'Silverlight,Version=v4.0,Profile=WindowsPhone'
