--- a/source/_posts/2013-08-06-v0-12-released.md
+++ b/source/_posts/2013-08-06-v0-12-released.md
@@ -22,7 +22,7 @@ Due to the complexities of supporting multiple versions, I have dropped Office 2
 
 I have also released a getting started video. This is one of the first screencasts I have done, so I will likely do it again next release. Also when you install VSTO Contrib, a readme will popup, this will help you get started.
 
-<iframe width="420" height="315" src="//www.youtube.com/embed/TxRjNsaVX6U" frameborder="0" allowfullscreen></iframe>
+<object width="420" height="315"><param name="movie" value="//www.youtube.com/v/TxRjNsaVX6U?version=3&amp;hl=en_GB"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/TxRjNsaVX6U?version=3&amp;hl=en_GB" type="application/x-shockwave-flash" width="420" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
 
 I will try to produce some documentation/blog posts on VSTO Contrib over the next few weeks.
 
