Added <!-- more --> breaks in majority of posts

--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -24,7 +24,7 @@ This grew... we now verify all application logs, have helpers which wait for our
 I have started breaking out the framework we built into a CodedUI contrib project which lives in the MSTestContrib project on codeplex ([http://mstestcontrib.codeplex.com](http://mstestcontrib.codeplex.com))
 
 I will be creating a WPF Todo application using the framework, writing my UI Automation tests first, refactoring, making mistakes, improving the code etc. It will be the first time I have used EF, so this whole thing will be a learning experience.
-
+<!-- more -->
 # Ready... Go
 For the purposes of the demo app, I will simply have an in memory repository. We can always add proper persistence and such later.
 
