--- a/source/_posts/2011-07-23-wpmvc.md
+++ b/source/_posts/2011-07-23-wpmvc.md
@@ -33,7 +33,7 @@ This will change over time, so check out the change log.
 - Autofac Support Via an Extension
 - Easy access to page or application transient storage
 - Simple tombstoning support
-
+<!-- more -->
 #Other cool stuff
 
 ## Nice small/clean app.xaml/app.xaml.cs
