Adding tag cloud in, and improving tags

--- a/source/_posts/2010-11-21-ccoz2010.md
+++ b/source/_posts/2010-11-21-ccoz2010.md
@@ -5,7 +5,7 @@ metaTitle: Developing with VSTO at Code Camp Oz 2010
 description: Developing with VSTO at Code Camp Oz 2010
 revised: 2011-02-19
 date: 2010-11-21
-categories: [vsto,vsto-contrib,codecampoz]
+categories: [VSTO, Presenting]
 migrated: true
 comments: true
 sharing: true
