--- a/source/_posts/2011-01-01-evangeloz2010.md
+++ b/source/_posts/2011-01-01-evangeloz2010.md
@@ -5,7 +5,7 @@ metaTitle: Microsoft Evangelism Academy
 description: Just before Christmas I was lucky enough to addend the inaugural MS Evangelism Academy with 7 others to take our presentations to the next level
 revised: 2011-02-19
 date: 2011-01-01
-categories: [presenting,evangeloz]
+categories: [Presenting]
 migrated: true
 comments: true
 sharing: true
