--- a/source/_posts/2011-06-21-nugetwp7.md
+++ b/source/_posts/2011-06-21-nugetwp7.md
@@ -5,7 +5,7 @@ metaTitle: New post
 description: NuGet 1.4 has just come out, as has the mango tools. 1.4 breaks existing targets, here is my solution
 revised: 2011-07-26
 date: 2011-06-21
-categories: [mango,wp7,nuget]
+categories: [Windows Phone, NuGet]
 migrated: true
 comments: true
 sharing: true
