--- a/source/_posts/2011-07-12-uitdd.md
+++ b/source/_posts/2011-07-12-uitdd.md
@@ -5,7 +5,7 @@ metaTitle: UI TDD  - UI Automation Experiment
 description: After using UI automation in a project which went live yesterday, I wanted to try UI TDD with my lessons learnt. This is the story.
 revised: 2011-07-18
 date: 2011-07-12
-categories: [ui-automation,open-source]
+categories: [Open Source, UI Automation]
 migrated: true
 comments: true
 sharing: true
