--- a/source/_posts/2011-07-23-wpmvc.md
+++ b/source/_posts/2011-07-23-wpmvc.md
@@ -5,7 +5,7 @@ metaTitle: Windows Phone MVC - Released
 description: I have been working on a MVC framework for Windows Phone 7 for a while. It is up on codeplex and it is slowly maturing.
 revised: 2011-07-24
 date: 2011-07-23
-categories: [wp7,mvc,open-source]
+categories: [Windows Phone, Open Source]
 migrated: true
 comments: true
 sharing: true
