--- a/source/_posts/2011-08-29-teched-2011.md
+++ b/source/_posts/2011-08-29-teched-2011.md
@@ -5,7 +5,7 @@ metaTitle: My Sessions at TechEd 2011
 description: I am doing two talks and a few demos at TechEd Au. If you are there, come have a look.
 revised: 2011-08-29
 date: 2011-08-29
-categories: [vsto,wp7,presentations]
+categories: [VSTO, Presenting, Windows Phone]
 migrated: true
 comments: true
 sharing: true
@@ -15,15 +15,15 @@ summary: |
   
 
 ---
-! DEV304 - Adding Value to Software Projects with VSTO (Wed, 11:30am)
+# DEV304 - Adding Value to Software Projects with VSTO (Wed, 11:30am)
 This sessions will have something for everyone, if you have never used VSTO and are interested in it, I will be showing the value it has.
 If you have used it, and hated it, I will also be showing how to improve your experience and give you a way of approaching the problems and some nice ways to improve the default experience. Part of this is a quick intro to COM Interop, how it works and how to make sure you avoid problems with it.
 And finally, I will be showing a bit of VSTO contrib and how you can use IoC and other cool enhancements to the platform.
 
-! WPH305 - Multi-Tasking and Application Services (Fri, 8:15am)
+# WPH305 - Multi-Tasking and Application Services (Fri, 8:15am)
 In this session with Chris Walsh, we will be going through a whole lot of App services related features in Windows Phone Mango. We will cover things like Multi-Tasking, Background agents, Tiles, Notifications and Search extra's. We have some cool demo's and it will be a fun session.
 
-! Demos
+# Demos
 I also have a few demo's lined up
  - Unit Testing with WP7 (1:30pm Wednesday)
  - Windows Phone MVC Intro (2:00pm Wednesday)
