--- a/source/_posts/2013-08-06-v0-12-released.md
+++ b/source/_posts/2013-08-06-v0-12-released.md
@@ -5,7 +5,7 @@ metaTitle: VSTO Contrib v0.12 Released
 description: 
 revised: 2013-08-06
 date: 2013-08-06
-categories: [vsto,vsto-contrib]
+categories: [VSTO,Open Source]
 migrated: true
 comments: true
 sharing: true
