--- a/source/_posts/2010-08-21-tech-ed-2010.md
+++ b/source/_posts/2010-08-21-tech-ed-2010.md
@@ -3,9 +3,9 @@ layout: post
 title: TechEd 2010
 metaTitle: I will be speaking at TechEd 2010!
 description: I will be speaking at TechEd 2010!
-revised: 2011-02-19
+revised: 2011-02-20
 date: 2010-08-21
-categories: [teched,vsto,presenting]
+categories: [VSTO, Presenting]
 migrated: true
 comments: true
 sharing: true
