--- a/source/_posts/2011-01-01-2010wrapup.md
+++ b/source/_posts/2011-01-01-2010wrapup.md
@@ -5,7 +5,7 @@ metaTitle: 2010 Wrapup
 description: 2010 was a big year for me, this is a bit of a rundown of what I have done
 revised: 2011-02-19
 date: 2011-01-01
-categories: [open-source]
+categories: [Open Source]
 migrated: true
 comments: true
 sharing: true
