--- a/source/_posts/2014-05-08-bddfy-v4-beta1.md
+++ b/source/_posts/2014-05-08-bddfy-v4-beta1.md
@@ -5,7 +5,7 @@ date: 2014-05-08 9:05:00 +0000
 comments: true
 ---
 
-We are excited to announce v4 beta 1 of BDDfy, to give it a spin just change your NuGet settings to include pre-release and update. Please give it a go and report any issues/feedback you have so can fix them before the final v4 release.
+We are excited to announce v4 beta 1 of BDDfy! To give it a spin just change your NuGet settings to include pre-release and update. Please give it a go and report any issues/feedback you have so can fix them before the final v4 release.
 
 ## New Features
 v4 has a bunch of new stuff included which takes BDDfy from not only the simplest BDD framework for .NET but also one of the most powerful!
@@ -13,9 +13,9 @@ v4 has a bunch of new stuff included which takes BDDfy from not only the simples
 New features include:
 
  - [Examples support](/blog/2014/05/05/bddfy-examples-support/)
-	 - This was one of the biggest missing features of BDDfy, we support text based tables (to support easy migration from SpecFlow), and also examples in code which allows complex types rather than just basic types!
+	 - This was one of the biggest missing features of BDDfy. We support text based tables (to support easy migration from SpecFlow) and also examples in code which allows complex types rather than just basic types!
 	 - See the linked blog post for more information about examples.
-	 - If you have not seen cucumber examples before, check out [https://github.com/cucumber/cucumber/wiki/Scenario-Outlines](https://github.com/cucumber/cucumber/wiki/Scenario-Outlines) for more information
+	 - If you have not seen cucumber examples before check out [https://github.com/cucumber/cucumber/wiki/Scenario-Outlines](https://github.com/cucumber/cucumber/wiki/Scenario-Outlines) for more information
  - Tags
 	 - `.WithTags("Tag1", "Tag2")` will be seen in your reports. Tag functionality is really basic at the moment, and will be improved in v4.1
  - Fluent: Step titles are prefixed with the step type
@@ -50,6 +50,6 @@ Check out the release notes at [https://github.com/TestStack/TestStack.BDDfy/blo
 -	Examples do not work with RunStepWithArgsAttribute (https://github.com/TestStack/TestStack.BDDfy/issues/136)
 
 ## Feedback wanted
-This is an exciting release for BDDfy, and we want to hear about any issues you hit
+This is an exciting release for BDDfy and we want to hear about any issues you hit
 
 From the TestStack team ([Jake Ginnivan](https://github.com/JakeGinnivan), [Mehdi Khalili](https://github.com/MehdiK), [Michael Whelan](https://github.com/mwhelan) and [Rob Moore](https://github.com/robdmoore))
