Few more updates

--- a/source/_posts/2014-05-08-bddfy-v4-beta1.md
+++ b/source/_posts/2014-05-08-bddfy-v4-beta1.md
@@ -12,12 +12,13 @@ v4 has a bunch of new stuff included which takes BDDfy from not only the simples
 
 New features include:
 
- - [Examples support](/blog/2014/05/05/bddfy-examples-support/)
+ - Cucumber Examples support
 	 - This was one of the biggest missing features of BDDfy. We support text based tables (to support easy migration from SpecFlow) and also examples in code which allows complex types rather than just basic types!
-	 - See the linked blog post for more information about examples.
 	 - If you have not seen cucumber examples before check out [https://github.com/cucumber/cucumber/wiki/Scenario-Outlines](https://github.com/cucumber/cucumber/wiki/Scenario-Outlines) for more information
+	 - See the [examples blog post](/blog/2014/05/05/bddfy-examples-support/) for more information about examples and how they work in BDDfy
  - Tags
-	 - `.WithTags("Tag1", "Tag2")` will be seen in your reports. Tag functionality is really basic at the moment, and will be improved in v4.1
+	 - `.WithTags("Tag1", "Tag2")` will be seen in your reports. For example in text reporter you will get `Tags: Tag1, Tag2` under the test output. The HTML report will have tags boxes next to the step title
+	 - Tag functionality is really basic at the moment, and will be improved in v4.1
  - Fluent: Step titles are prefixed with the step type
 	 - For example: `this.Given(_ => Something())` will result in a step title of `Given something`
  - Fluent: Removed restriction on order of step types. So you can create more complex tests (for acceptance/UI based tests). i.e `.Given().Then().When().Then().And().When().Then()` etc.
