--- a/source/_posts/2014-05-08-bddfy-v4-beta1.md
+++ b/source/_posts/2014-05-08-bddfy-v4-beta1.md
@@ -5,11 +5,13 @@ date: 2014-05-08 9:05:00 +0000
 comments: true
 ---
 
-We are excited to announce v4 beta 1 of BDDfy! To give it a spin just change your NuGet settings to include pre-release and update. Please give it a go and report any issues/feedback you have so can fix them before the final v4 release.
+We are excited to announce v4 beta 1 of BDDfy! To give it a spin just change your NuGet settings to include pre-release and update. v4 has a bunch of new stuff included which takes BDDfy from not only the simplest BDD framework for .NET but also one of the most powerful!
+
+Please give it a go and report any issues/feedback you have so can fix them before the final v4 release.
+
+<!-- more -->
 
 ## New Features
-v4 has a bunch of new stuff included which takes BDDfy from not only the simplest BDD framework for .NET but also one of the most powerful!
-
 New features include:
 
  - Cucumber Examples support
